# real-estate-api

./: .coveragerc  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  app.py  boot.sh  config.py  docker-compose.yml  flasky.py  manage.py  models.py  pyproject.toml  pytest.ini  requirements.txt
.circleci/: config.yml
app/: __init__.py  gmaps.py  models.py  services.py
app/api/: __init__.py  serializers.py  views.py
app/api/v1/: serializers.py  views.py
app/docs/: properties_template.yml
app/tests/: conftest.py  conftest_session.py  test_client.py  test_properties.py
docker/: Dockerfile
migrations/: alembic.ini  env.py
migrations/versions/: 0f82a9aaafa1_.py  1d7538c9504e_populate_federal_unity_table.py  2a3ceebcfeba_.py  4e57faba5cb1_.py  4f1de60a0b2e_.py  579556f7500b_.py  5892a034b273_.py  71f6d75c08cb_.py  82e1c5776417_.py  97795b99bb1d_.py  c18de4cac5ad_.py  daad7fb14035_.py
