[tool.poetry]
name = "real-estate-backend"
version = "0.1.0"
description = ""
authors = ["Alisson Granemann Abreu <alissongranemannabreu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
alembic = "=1.0.11"
aniso8601 = "=7.0.0"
appdirs = "=1.4.3"
"aspy.yaml" = "=1.3.0"
atomicwrites = "=1.3.0"
attrs = "=19.1.0"
cfgv = "=2.0.1"
Click = "=7.0"
entrypoints = "=0.3"
Flask = "=1.1.1"
Flask-Migrate = "=2.5.2"
Flask-RESTful = "=0.3.7"
Flask-Script = "=2.0.6"
Flask-SQLAlchemy = "=2.4.0"
GeoAlchemy2 = "=0.6.3"
gunicorn = "=19.9.0"
identify = "=1.4.6"
importlib-metadata = "=0.19"
itsdangerous = "=1.1.0"
Jinja2 = "=2.10.1"
Mako = "=1.1.0"
MarkupSafe = "=1.1.1"
marshmallow = "=3.0.0rc9"
mccabe = "=0.6.1"
more-itertools = "=7.2.0"
nodeenv = "=1.3.3"
packaging = "=19.1"
pluggy = "=0.12.0"
psycopg2 = "=2.8.3"
psycopg2-binary = "=2.8.3"
py = "=1.8.0"
pycodestyle = "=2.5.0"
pyflakes = "=2.1.1"
pyparsing = "=2.4.2"
pytest = "=5.0.1"
python-dateutil = "=2.8.0"
python-dotenv = "=0.10.3"
python-editor = "=1.0.4"
pytz = "=2019.2"
PyYAML = "=5.1.2"
six = "=1.12.0"
SQLAlchemy = "=1.3.6"
toml = "=0.10.0"
wcwidth = "=0.1.7"
Werkzeug = "=0.15.5"
zipp = "=0.5.2"
sqlalchemy-utils = "^0.34.1"
googlemaps = "^3.0"
apispec = "^3.1.0"
flasgger = "^0.9.3"

[tool.poetry.dev-dependencies]
black = "=19.3b0"
virtualenv = "=16.7.2"
pre-commit = "=1.18.1"
flake8 = "=3.7.8"
Flask-Testing = "^0.7.1"
pytest-env = "^0.6.2"
subprocess32 = "^3.5"
pytest-cov = "^2.7"
pytest-html = "^1.22"
pytest-mock = "^1.10"
pytest-flask = "^0.15.0"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
